# lessons_9.2

./: README.md  info.txt  names_original.txt  pyproject.toml
src/: main.py
